Improve code compatibility and enhance project functionality
Refactors utility classes, adds GenerateImplementationAction, and updates plugin.xml.

Replit-Commit-Author: Agent
Replit-Commit-Session-Id: 895baa03-324e-4ef8-a584-81c93868c22d
Replit-Commit-Screenshot-Url: https://storage.googleapis.com/screenshot-production-us-central1/5f8eb474-b074-4f79-908a-d445b6dba375/c781e5b0-7159-4705-8925-57f39ad9fa0e.jpg